Refactor item handling in shopping process and enhance Student class toString method